Moved major-number to env var

--- a/kstate-api/Makefile
+++ b/kstate-api/Makefile
@@ -5,6 +5,10 @@ all:
 	sudo rmmod $(mod_name) || echo
 	make -C /lib/modules/$(shell uname -r)/build M=$(shell pwd) modules
 	sudo insmod $(mod_name).ko
-	sudo mknod /dev/$(mod_name) c 236 0 -m 777 || echo
+ifdef major
+	sudo mknod /dev/$(mod_name) c $(major) 0 -m 777 || echo
+endif
+
 clean:
 	make -C /lib/modules/$(shell uname -r)/build M=$(shell pwd) clean
+	sudo rm -f /dev/$(mod_name)
